--- a/package.json
+++ b/package.json
@@ -43,12 +43,14 @@
     "@radix-ui/react-tooltip": "^1.2.0",
     "@tanstack/react-query": "^5.60.5",
     "@types/bcryptjs": "^2.4.6",
+    "@types/cron": "^2.0.1",
     "@types/ssh2": "^1.15.5",
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "connect-pg-simple": "^10.0.0",
+    "cron": "^4.4.0",
     "d3-geo": "^3.1.1",
     "date-fns": "^3.6.0",
     "drizzle-orm": "^0.39.3",
