--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/cron": "^2.0.1",
     "@types/ssh2": "^1.15.5",
+    "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
