--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@tanstack/react-query": "^5.60.5",
     "@types/bcryptjs": "^2.4.6",
     "@types/cron": "^2.0.1",
+    "@types/multer": "^2.0.0",
     "@types/ssh2": "^1.15.5",
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
@@ -64,6 +65,7 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.453.0",
     "memorystore": "^1.6.7",
+    "multer": "^2.0.2",
     "next-themes": "^0.4.6",
     "otpauth": "^9.4.1",
     "passport": "^0.7.0",
@@ -77,6 +79,7 @@
     "react-resizable-panels": "^2.1.7",
     "react-simple-maps": "^3.0.0",
     "recharts": "^2.15.4",
+    "sharp": "^0.34.5",
     "socket.io": "^4.8.3",
     "socket.io-client": "^4.8.3",
     "ssh2": "^1.17.0",
