--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/cron": "^2.0.1",
     "@types/multer": "^2.0.0",
+    "@types/qrcode": "^1.5.6",
     "@types/ssh2": "^1.15.5",
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
@@ -71,6 +72,7 @@
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "pg": "^8.16.3",
+    "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
