--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/cron": "^2.0.1",
     "@types/multer": "^2.0.0",
     "@types/qrcode": "^1.5.6",
+    "@types/speakeasy": "^2.0.10",
     "@types/ssh2": "^1.15.5",
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
@@ -84,6 +85,7 @@
     "sharp": "^0.34.5",
     "socket.io": "^4.8.3",
     "socket.io-client": "^4.8.3",
+    "speakeasy": "^2.0.0",
     "ssh2": "^1.17.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
