--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@tanstack/react-query": "^5.60.5",
     "@types/bcryptjs": "^2.4.6",
     "@types/cron": "^2.0.1",
+    "@types/geoip-lite": "^1.4.4",
     "@types/multer": "^2.0.0",
     "@types/qrcode": "^1.5.6",
     "@types/speakeasy": "^2.0.10",
@@ -63,9 +64,11 @@
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "framer-motion": "^11.18.2",
+    "geoip-lite": "^1.4.10",
     "hls.js": "^1.6.15",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.453.0",
+    "maxmind": "^5.0.3",
     "memorystore": "^1.6.7",
     "multer": "^2.0.2",
     "next-themes": "^0.4.6",
