--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/geoip-lite": "^1.4.4",
     "@types/multer": "^2.0.0",
     "@types/qrcode": "^1.5.6",
+    "@types/socket.io": "^3.0.1",
     "@types/speakeasy": "^2.0.10",
     "@types/ssh2": "^1.15.5",
     "axios": "^1.13.2",
@@ -81,6 +82,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.55.0",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.4.0",
     "react-resizable-panels": "^2.1.7",
     "react-simple-maps": "^3.0.0",
@@ -111,15 +113,15 @@
     "@types/node": "20.19.27",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
-    "@types/react": "^18.3.11",
-    "@types/react-dom": "^18.3.1",
+    "@types/react": "^18.3.27",
+    "@types/react-dom": "^18.3.7",
     "@types/ws": "^8.18.1",
     "@vitejs/plugin-react": "^4.7.0",
-    "autoprefixer": "^10.4.20",
+    "autoprefixer": "^10.4.23",
     "drizzle-kit": "^0.31.8",
     "esbuild": "^0.25.0",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.17",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.19",
     "tsx": "^4.20.5",
     "typescript": "5.6.3",
     "vite": "^7.3.0"
