--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev": "NODE_ENV=development tsx server/index.ts",
-    "build": "tsx script/build.ts",
-    "start": "NODE_ENV=production node dist/index.cjs",
+    "dev": "vite dev",
+    "build": "vite build",
+    "preview": "wrangler pages dev dist",
+    "start": "wrangler pages dev dist --ip 0.0.0.0 --port 3000",
     "check": "tsc",
     "db:push": "drizzle-kit push"
   },
   "dependencies": {
+    "@hono/vite-cloudflare-pages": "^0.4.3",
     "@hookform/resolvers": "^3.10.0",
     "@jridgewell/trace-mapping": "^0.3.25",
     "@octokit/rest": "^22.0.0",
@@ -67,6 +69,7 @@
     "framer-motion": "^11.18.2",
     "geoip-lite": "^1.4.10",
     "hls.js": "^1.6.15",
+    "hono": "^4.11.5",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.453.0",
     "maxmind": "^5.0.3",
