--- a/package.json
+++ b/package.json
@@ -4,16 +4,27 @@
   "type": "module",
   "scripts": {
     "dev": "tsx watch server/index.ts",
+    "dev:client": "vite --config vite.config.client.ts",
     "build": "vite build --config vite.config.client.ts",
+    "build:prod": "NODE_OPTIONS='--max-old-space-size=4096' vite build --config vite.config.client.ts",
     "start": "NODE_ENV=production tsx server/index.ts",
-    "pm2:dev": "pm2 start ecosystem.config.cjs",
+    "pm2:start": "pm2 start ecosystem.config.cjs",
     "pm2:stop": "pm2 stop all",
     "pm2:restart": "pm2 restart all",
-    "pm2:logs": "pm2 logs",
-    "check": "tsc"
+    "pm2:logs": "pm2 logs --nostream",
+    "pm2:delete": "pm2 delete all",
+    "db:push": "drizzle-kit push",
+    "db:migrate": "tsx server/scripts/migrate.ts",
+    "db:seed": "tsx server/scripts/seed.ts",
+    "db:studio": "drizzle-kit studio",
+    "check": "tsc",
+    "clean": "rm -rf dist node_modules/.vite",
+    "install:all": "npm install && npm install tsx dotenv -g",
+    "postinstall": "npm run build"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
+    "@octokit/rest": "^22.0.0",
     "@radix-ui/react-accordion": "^1.2.4",
     "@radix-ui/react-alert-dialog": "^1.1.7",
     "@radix-ui/react-aspect-ratio": "^1.1.3",
@@ -35,16 +46,21 @@
     "@radix-ui/react-tooltip": "^1.1.7",
     "@tanstack/react-query": "^5.64.2",
     "@types/bcryptjs": "^2.4.6",
+    "@types/body-parser": "^1.19.5",
+    "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.19",
     "@types/qrcode": "^1.5.6",
     "axios": "^1.13.3",
     "bcryptjs": "^3.0.3",
+    "body-parser": "^1.20.3",
     "chart.js": "^4.5.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.6",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.3",
     "drizzle-kit": "^0.31.8",
     "drizzle-orm": "^0.45.1",
     "drizzle-zod": "^0.8.3",
@@ -54,20 +70,26 @@
     "hls.js": "^1.5.19",
     "lucide-react": "^0.468.0",
     "multer": "^1.4.5-lts.1",
+    "otpauth": "^10.0.1",
     "pg": "^8.13.1",
+    "postgres": "^3.4.5",
     "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.1",
     "react-day-picker": "^9.4.5",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.1",
+    "react-router-dom": "^7.1.3",
     "react-simple-maps": "^3.0.0",
     "recharts": "^2.15.1",
+    "sharp": "^0.33.6",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "sonner": "^1.7.3",
+    "ssh2": "^1.17.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "vaul": "^1.3.1",
     "wouter": "^3.4.2",
     "zod": "^3.24.1"
   },
