--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@types/qrcode": "^1.5.6",
     "axios": "^1.13.3",
     "bcryptjs": "^3.0.3",
+    "systeminformation": "^5.23.5",
     "body-parser": "^1.20.3",
     "chart.js": "^4.5.1",
     "class-variance-authority": "^0.7.0",
